Edited content in the about-this-app section

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,10 @@
     <script src="libs/flexslider/jquery.flexslider.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-flexslider/angular-flexslider.js"></script>
-    <!-- Angular Modal Service-->
+    <!-- Angular Modal Service
     <script src="libs/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="libs/angular-resource/angular-resource.min.js"></script>
+    -->
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
     <!-- JS (load angular, ui-router, and our custom js file) -->
     <!-- <script src="app.js"></script> -->
@@ -34,10 +35,12 @@
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
     <!-- .js files containing custom modules I initially injected into main app. check README.md
     <script src="js/ngFlexSlider.js"></script>
-    <script src="js/firebase.js"></script>
+
+    <script src="js/formCtrl.js"></script>
+     -->
     <script src="js/routes.js"></script>
     
-                -->
+    
     <script src="app.js"></script>
     <!--Custom Scripts -->
     <!-- Latest compiled and minified CSS -->
