--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,13 @@
     <script src="libs/jquery/dist/jquery.js"></script>
     <!--Angular-Flexslider-->
     <script src="libs/flexslider/jquery.flexslider.js"></script>
-    <script src="libs/angular/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
     <script src="libs/angular-flexslider/angular-flexslider.js"></script>
     <!-- Angular Modal Service
     <script src="libs/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="libs/angular-resource/angular-resource.min.js"></script>
     -->
+    <script src="libs/angular-messages/angular-messages.min.js"></script>
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
     <!-- JS (load angular, ui-router, and our custom js file) -->
     <!-- <script src="app.js"></script> -->
