--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
         border-radius: 0;
     }
     </style>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <meta http-equiv="content-language" content="en">
+    <meta http-equiv="content-language" content="en-gb">
+    <meta name="description" content="Thomas Greco is a Web Application Developer based out of New York City, specializing in using the MEAN stack to build full stack JavaScript Applications. In addition to web development, Thomas is a skilled graphic designer, and displays proficiency when using PhotShop and Illustrator.">
     <title>Thomas Joseph Greco Web Development - Manhattan NY</title>
+    <link rel="shortcut icon" href="thomasgrecodotme.ico" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700,400italic|Alegreya:400italic,400,700' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -40,8 +43,6 @@
     <script src="js/formCtrl.js"></script>
      -->
     <script src="js/routes.js"></script>
-    
-    
     <script src="app.js"></script>
     <!--Custom Scripts -->
     <!-- Latest compiled and minified CSS -->
