--- a/public/index.html
+++ b/public/index.html
@@ -12,40 +12,22 @@
     <meta http-equiv="content-language" content="en">
     <meta http-equiv="content-language" content="en-gb">
     <meta name="description" content="Thomas Greco is a Web Application Developer based out of New York City, specializing in using the MEAN stack to build full stack JavaScript Applications. In addition to web development, Thomas is a skilled graphic designer, and displays proficiency when using PhotShop and Illustrator.">
-    <title>Thomas Joseph Greco Web Development - Manhattan NY</title>
+    <title>Thomas Joseph Greco | JavaScript Web Application Developmer | Graphic Designer | New York City</title>
+      <!-- custom styles -->
     <link rel="shortcut icon" href="thomasgrecodotme.ico" type="image/x-icon">
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700,400italic|Alegreya:400italic,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700,400italic' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!--Bower Scripts -->
-    <!-- jQuery -->
     <script src="libs/jquery/dist/jquery.js"></script>
-    <!--Angular-Flexslider-->
     <script src="libs/flexslider/jquery.flexslider.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+    <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-flexslider/angular-flexslider.js"></script>
-    <!-- Angular Modal Service
-    <script src="libs/angular-modal-service/dst/angular-modal-service.js"></script>
-    <script src="libs/angular-resource/angular-resource.min.js"></script>
-    -->
     <script src="libs/angular-messages/angular-messages.min.js"></script>
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <!-- JS (load angular, ui-router, and our custom js file) -->
-    <!-- <script src="app.js"></script> -->
-    <!-- Firebase -->
-    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-    <script src="libs/angularfire/dist/angularfire.min.js"></script>
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
-    <!-- .js files containing custom modules I initially injected into main app. check README.md
-    <script src="js/ngFlexSlider.js"></script>
-
-    <script src="js/formCtrl.js"></script>
-     -->
     <script src="js/routes.js"></script>
     <script src="app.js"></script>
-    <!--Custom Scripts -->
-    <!-- Latest compiled and minified CSS -->
+    <!-- custom styles -->
     <link rel="stylesheet" href="libs/flexslider/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
