--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <script src="libs/angular-messages/angular-messages.min.js"></script>
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="js/routes.js"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
     <!-- custom styles -->
     <link rel="stylesheet" href="libs/flexslider/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
