Fixed hashbangs from /#/ to / by changing html5 mode & adding href=/ to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="content-language" content="en">
     <meta http-equiv="content-language" content="en-gb">
     <meta name="description" content="Thomas Greco is a Web Application Developer based out of New York City, specializing in using the MEAN stack to build full stack JavaScript Applications. In addition to web development, Thomas is a skilled graphic designer, and displays proficiency when using PhotShop and Illustrator.">
+    <base href="/">
     <title>Thomas Joseph Greco | JavaScript Web Application Developmer | Graphic Designer | New York City</title>
       <!-- custom styles -->
     <link rel="shortcut icon" href="thomasgrecodotme.ico" type="image/x-icon">
