--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
     <script src="libs/jquery/dist/jquery.js"></script>
     <script src="libs/flexslider/jquery.flexslider.js"></script>
     <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/ngFx/dist/ngFx.js"></script>
     <script src="libs/angular-flexslider/angular-flexslider.js"></script>
+    <script src="libs/angular-animate/angular-animate.min.js"></script>
     <script src="libs/angular-messages/angular-messages.min.js"></script>
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="js/routes.js"></script>
@@ -33,6 +35,7 @@
     <script src="js/form.js"></script>
     <script src="js/app.js"></script>
     <!-- custom styles -->
+    <link rel="stylesheet" href="libs/animate.css/animate.css">
     <link rel="stylesheet" href="libs/flexslider/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
